CSS: fix dark mode toggle hover when in dark mode.

--- a/assets/css/partials/_forms.scss
+++ b/assets/css/partials/_forms.scss
@@ -303,6 +303,7 @@ h2 + .search-form {
 		&:focus {
 			background: none;
 			border: none;
+			color: $white;
 		}
 
 		svg {
