--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1090,6 +1090,7 @@ h2 + .search-form {
 .dark-mode .theme-toggle-button:hover, .dark-mode .theme-toggle-button:focus {
   background: none;
   border: none;
+  color: #ffffff;
 }
 
 .dark-mode .theme-toggle-button svg {
